// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextForm renders without crashing with all props 1`] = `
<div
  className="m-text-form"
>
  <form
    onKeyDown={[Function]}
  >
    <TextInput
      a11yLabel="Some label"
      hasBackground={true}
      hasLabel={true}
      onClick={[Function]}
      onTextChange={[MockFunction]}
      placeholder=""
      textLabel="Some label"
    />
    <Button
      a11yLabel="Some label"
      className=""
      onClick={[MockFunction]}
      textLabel="Some label"
    />
  </form>
</div>
`;

exports[`TextForm renders without crashing with only required props 1`] = `
<div
  className="m-text-form"
>
  <form
    onKeyDown={[Function]}
  >
    <TextInput
      a11yLabel="Some label"
      hasBackground={true}
      hasLabel={true}
      onClick={[Function]}
      onTextChange={[Function]}
      placeholder=""
      textLabel="Some label"
    />
    <Button
      a11yLabel="Label me."
      className=""
      onClick={[Function]}
      textLabel="Label me."
    />
  </form>
</div>
`;
